--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7,14 +7,16 @@ main section {
   flex-direction: row;
 }
 
-main section input {
+main section p {
   background: #ced4da;
   font-size: 110%;
   letter-spacing: 1px;
+  text-transform: uppercase;
   width: 300px;
+  height: 20px;
+  text-align: right;
   padding: 15px 10px;
-  display: flex;
-  text-align: end;
+  margin: 30px;
   border: 5px solid #e9ecef;
   border-radius: 10px;
   box-shadow: 0 0 10px #bdc0c4;
@@ -43,7 +45,7 @@ main section ul li button {
 }
 
 main section .btn-comprido li button {
-  line-height: 500%;
+  line-height: 535%;
 }
 
 main button {
